<resources>
    <string name="app_name">Lab1</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="signIn">登录</string>
    <string name="register">注册</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="username1">学号:</string>
    <string name="username2">请输入用户名</string>
    <string name="password1">密码:</string>
    <string name="password2">请输入密码</string>
</resources>
